--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "@wuerdevoll/sequelize-typescript-migration",
-  "version": "0.0.1-beta.5",
+  "version": "0.0.1",
   "description": "migration tool for sequelize & typescript users",
   "keywords": [
     "sequelize",
