--- a/tsconfig.json
+++ b/tsconfig.json
@@ -2,7 +2,6 @@
   "compilerOptions": {
     "target": "esnext",
     "lib": ["esnext", "dom"],
-    "rootDir": "./",
     "allowJs": true,
     "checkJs": false,
     "skipLibCheck": true,
@@ -20,9 +19,12 @@
     "sourceMap": true,
     "experimentalDecorators": true,
     "emitDecoratorMetadata": true,
+    "baseUrl": "./",
+    "paths": {
+      "@src/*": ["src/*"]
+    },
     "outDir": "dist",
     "charset": "utf8"
   },
-  "include": ["./src"],
   "exclude": ["node_modules", "dist", "example"]
 }
