--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "@wuerdevoll/sequelize-typescript-migration",
-  "version": "1.0.0",
+  "version": "2.0.0-beta.1",
   "description": "migration tool for sequelize & typescript users",
   "keywords": [
     "sequelize",
@@ -38,9 +38,9 @@
     "js-beautify": "^1.14.0",
     "mysql2": "^2.2.5",
     "reflect-metadata": "^0.1.13",
-    "sequelize": "^5.22.4",
-    "sequelize-typescript": "^1.1.0",
-    "typescript": "^3.9.10"
+    "sequelize": "^6.6.2",
+    "sequelize-typescript": "^2.1.0",
+    "typescript": "^4.3.4"
   },
   "devDependencies": {
     "@types/bluebird": "^3.5.35",
@@ -49,11 +49,11 @@
     "@types/js-beautify": "^1.13.1",
     "@types/node": "^13.13.52",
     "@types/validator": "^13.1.4",
-    "ts-node": "^8.10.2",
+    "ts-node": "^10.0.0",
     "tsconfig-paths": "^3.9.0"
   },
   "engines": {
-    "node": ">=10"
+    "node": ">=12"
   },
   "directories": {
     "example": "example"
