--- a/package.json
+++ b/package.json
@@ -20,6 +20,7 @@
   },
   "main": "dist/index.js",
   "scripts": {
+    "release": "npm publish --access public",
     "build": "tsc",
     "start": "node dist/index.js"
   },
