--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
-  "name": "@wuerdevoll/sequelize-typescript-migration",
-  "version": "2.0.0-beta.2",
+  "name": "@viiinzzz/sequelize-typescript-migration",
+  "version": "2.0.0-20220327",
   "description": "migration tool for sequelize & typescript users",
   "keywords": [
     "sequelize",
@@ -13,45 +13,46 @@
     "detect",
     "changes"
   ],
-  "homepage": "https://github.com/mricharz/sequelize-typescript-migration",
+  "homepage": "https://github.com/viiinzzz/sequelize-typescript-migration",
   "bugs": {
-    "url": "https://github.com/mricharz/sequelize-typescript-migration/issues",
-    "email": "support@wuerdevoll.tv"
+    "url": "https://github.com/viiinzzz/sequelize-typescript-migration/issues",
+    "email": "vincentfontaine.jobs@gmail.com"
   },
   "main": "dist/index.js",
   "scripts": {
     "release": "npm publish --access public",
     "build": "tsc",
-    "start": "node dist/index.js"
+    "start": "node dist/index.js",
+    "packlist": "npx npm-packlist"
   },
   "bin": {
     "sequelize-typescript-migration": "dist/index.js"
   },
   "repository": {
     "type": "git",
-    "url": "git://github.com/mricharz/sequelize-typescript-migration.git"
+    "url": "git://github.com/viiinzzz/sequelize-typescript-migration.git"
   },
-  "author": "wuerDEVoll <support@wuerdevoll.tv>",
+  "author": "vincentfontaine.jobs@gmail.com",
   "license": "MIT",
   "dependencies": {
     "deep-diff": "^1.0.2",
-    "inflection": "^1.13.1",
+    "inflection": "^1.13.2",
     "js-beautify": "^1.14.0",
-    "mysql2": "^2.2.5",
+    "mysql2": "^2.3.3",
     "reflect-metadata": "^0.1.13",
-    "sequelize": "^6.6.2",
-    "sequelize-typescript": "^2.1.0",
-    "typescript": "^4.3.4"
+    "sequelize": "^6.17.0",
+    "sequelize-typescript": "^2.1.3",
+    "typescript": "^4.6.3"
   },
   "devDependencies": {
-    "@types/bluebird": "^3.5.35",
-    "@types/deep-diff": "^1.0.0",
-    "@types/inflection": "^1.5.28",
-    "@types/js-beautify": "^1.13.1",
-    "@types/node": "^13.13.52",
-    "@types/validator": "^13.1.4",
-    "ts-node": "^10.0.0",
-    "tsconfig-paths": "^3.9.0"
+    "@types/bluebird": "^3.5.36",
+    "@types/deep-diff": "^1.0.1",
+    "@types/inflection": "^1.13.0",
+    "@types/js-beautify": "^1.13.3",
+    "@types/node": "^17.0.23",
+    "@types/validator": "^13.7.2",
+    "ts-node": "^10.7.0",
+    "tsconfig-paths": "^3.14.1"
   },
   "engines": {
     "node": ">=12"
