--- a/example/.env.sample
+++ b/example/.env.sample
@@ -1,5 +1,6 @@
 DATABASE_USER=postgres
-DATABASE_PASS=root
+DATABASE_PASS=6939
+DATABASE_PORT=5432
 DATABASE_NAME=STM
 DATABASE_DIALECT=postgres
 DATABASE_TIMEZONE=+03:30
