--- a/package.json
+++ b/package.json
@@ -23,7 +23,8 @@
     "release": "npm publish --access public",
     "build": "tsc",
     "start": "node dist/index.js",
-    "packlist": "npx npm-packlist"
+    "packlist": "npx npm-packlist",
+    "lint": "eslint src/* --ext .ts --fix"
   },
   "bin": {
     "sequelize-typescript-migration": "dist/index.js"
@@ -51,6 +52,15 @@
     "@types/js-beautify": "^1.13.3",
     "@types/node": "^17.0.23",
     "@types/validator": "^13.7.2",
+    "@typescript-eslint/eslint-plugin": "^5.30.7",
+    "@typescript-eslint/parser": "^5.30.7",
+    "eslint": "^8.20.0",
+    "eslint-config-prettier": "^8.5.0",
+    "eslint-config-standard": "^17.0.0",
+    "eslint-plugin-import": "^2.26.0",
+    "eslint-plugin-n": "^15.2.4",
+    "eslint-plugin-prettier": "^4.2.1",
+    "eslint-plugin-promise": "^6.0.0",
     "ts-node": "^10.7.0",
     "tsconfig-paths": "^3.14.1"
   },
