feat: linting src and example folders after merge

--- a/.eslintrc
+++ b/.eslintrc
@@ -38,7 +38,8 @@
         "devDependencies": [
           "**/*.test.ts",
           "webpack.config.js",
-          "jest.config.ts"
+          "jest.config.ts",
+          "example"
         ],
         "optionalDependencies": [
           "**/*.test.ts"
