--- a/package.json
+++ b/package.json
@@ -24,7 +24,8 @@
     "build": "tsc",
     "start": "node dist/index.js",
     "packlist": "npx npm-packlist",
-    "lint": "eslint --ext .ts ."
+    "lint": "eslint --ext .ts .",
+    "test": "jest --detectOpenHandles"
   },
   "bin": {
     "sequelize-typescript-migration": "dist/index.js"
@@ -48,6 +49,7 @@
     "@types/bluebird": "^3.5.36",
     "@types/deep-diff": "^1.0.1",
     "@types/inflection": "^1.13.0",
+    "@types/jest": "^29.4.0",
     "@types/js-beautify": "^1.13.3",
     "@types/node": "^17.0.23",
     "@types/validator": "^13.7.2",
@@ -61,7 +63,9 @@
     "eslint-plugin-n": "^15.2.4",
     "eslint-plugin-prettier": "^4.2.1",
     "eslint-plugin-promise": "^6.0.0",
+    "jest": "^29.4.0",
     "prettier": "^2.7.1",
+    "ts-jest": "^29.0.5",
     "ts-node": "^10.7.0",
     "tsconfig-paths": "^3.14.1",
     "typescript": "^4.8.4"
